Another failed attempt to implement shared PCH.

--- a/vnext/PropertySheets/SharedPch.props
+++ b/vnext/PropertySheets/SharedPch.props
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
+<!-- Copyright (c) Microsoft Corporation. All rights reserved. Licensed under the MIT License. See LICENSE in the project root for license information. -->
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <!--======================================================================================
   Shared Precompiled Headers 
@@ -20,7 +21,6 @@
     <SharedPch>$(SharedPchDir)SharedPch.pch</SharedPch>
     <SharedPdb>$(SharedPchDir)$(SharedPdbFile)</SharedPdb>
     <SharedIdb>$(SharedPchDir)$(SharedIdbFile)</SharedIdb>
-    <CppWinRTPrecompiledHeader>pch.h</CppWinRTPrecompiledHeader>
   </PropertyGroup>
 
   <ItemGroup>
@@ -59,38 +59,16 @@
     </Copy>
   </Target>
 
-  <!-- Set the PCH file for all projects that support shared PCH -->
-  <PropertyGroup>
-    <ProjectPrecompiledHeaderOutputFile>$(IntDir)$(TargetName).pch</ProjectPrecompiledHeaderOutputFile>
-  </PropertyGroup>
+  <!-- Allow access to shared pch.h file -->
   <ItemDefinitionGroup>
     <ClCompile>
       <AdditionalIncludeDirectories>$(SharedPchProjectDir);%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
-      <PrecompiledHeader>Use</PrecompiledHeader>
-      <PrecompiledHeaderFile>pch.h</PrecompiledHeaderFile>
-      <PrecompiledHeaderOutputFile>$(ProjectPrecompiledHeaderOutputFile)</PrecompiledHeaderOutputFile>
-      <!-- Provides a #define with the project's PCH file name. It is used by pch.cpp. Backslash is not friendly with C-strings - replace with forward slash. -->
-      <PreprocessorDefinitions Condition=" '$(MSBuildProjectName)' != '$(SharedPchProjectName)' ">PrecompiledHeaderOutputFile="$(ProjectPrecompiledHeaderOutputFile.Replace("\", "/"))";%(PreprocessorDefinitions)</PreprocessorDefinitions>
     </ClCompile>
   </ItemDefinitionGroup>
-
-  <!-- Add pch.cpp file to all projects that support shared PCH. This file creates Project.pch based of SharedPch.pch and pch.h -->
-  <ItemGroup Condition=" '$(MSBuildProjectName)' != '$(SharedPchProjectName)' ">
-    <ClCompile Include="$(SharedPchProjectDir)pch.cpp" Condition=" '$(EnableSharedPch)' == 'true' ">
-      <PrecompiledHeader>Use</PrecompiledHeader>
-      <PrecompiledHeaderFile>SharedPch.h</PrecompiledHeaderFile>
-      <PrecompiledHeaderOutputFile>$(SharedPch)</PrecompiledHeaderOutputFile>
-      <AdditionalOptions>/Yc %(AdditionalOptions)</AdditionalOptions>
-      <ProgramDataBaseFileName>$(SharedPdb)</ProgramDataBaseFileName>
-    </ClCompile>
-    <ClCompile Include="$(SharedPchProjectDir)ProjectPch.cpp" Condition=" '$(EnableSharedPch)' != 'true' ">
-      <PrecompiledHeader>Create</PrecompiledHeader>
-    </ClCompile>
-  </ItemGroup>
-
-  <!-- Include SharedPch.h -->
+  
+  <!-- Include pch.h -->
   <ItemGroup>
-    <ClInclude Include="$(SharedPchProjectDir)SharedPch.h" />
+    <ClInclude Include="$(SharedPchProjectDir)pch.h" />
   </ItemGroup>
 
 </Project>
